--- a/src/index.html
+++ b/src/index.html
@@ -7,5 +7,10 @@
   <title>Webpack Template</title>
 </head>
 <body>
+  <div id="screen">
+  </div>
+  <div class="button-wrapper">
+      <button id="startButton"></button>
+  </div>
 </body>
 </html>
