--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   <div id="screen">
   </div>
   <div class="button-wrapper">
-      <button id="startButton">RESET</button>
+      <button id="resetButton">RESET</button>
   </div>
 </body>
 </html>
