--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Webpack Template</title>
-</head>
+<link href="./assets/css/app.css" rel="stylesheet"></head>
 <body>
   <div id="screen">
   </div>
   <div class="button-wrapper">
       <button id="resetButton">RESET</button>
   </div>
-</body>
+<script type="text/javascript" src="./assets/js/app.js"></script></body>
 </html>
